turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:4: error: not found: value moveto
    moveto(getX()+50,getY())
    ^