turtleart.housetree.HouseTree.scala.code
override def run() {
  for (i <- 1 to 4){
    DoHouse()
    moveto(getX()+50,getY())
  }
}

def DoHouse(){
  for (i <- 1 to 4){
  forward(30)
  right(90)
  }
  forward(30)
    right(30)
  for (i <- 1 to 3){
    forward(30)
    right(120)
  }
  right(150)
  forward(30)
  right(180)
}
